--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title> WebSSH </title>
-    <link href="static/img/favicon.png" rel="icon" type="image/png">
-    <link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-    <link href="static/css/xterm.min.css" rel="stylesheet" type="text/css"/>
-    <link href="static/css/fullscreen.min.css" rel="stylesheet" type="text/css"/>
+    <link href="img/favicon.png" rel="icon" type="image/png">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/xterm.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/fullscreen.min.css" rel="stylesheet" type="text/css"/>
     <style>
       .row {
         margin-top: 15px;
@@ -88,11 +88,11 @@
       <div id="terminal"></div>
     </div>
 
-    <script src="static/js/jquery.min.js"></script>
-    <script src="static/js/popper.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/xterm.min.js"></script>
-    <script src="static/js/xterm-addon-fit.min.js"></script>
-    <script src="static/js/main.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/xterm.min.js"></script>
+    <script src="js/xterm-addon-fit.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
