Support read channel on web

--- a/static/index.html
+++ b/static/index.html
@@ -59,6 +59,14 @@
             <input class="form-control" type="password" id="password" name="password" value="">
           </div>
         </div>
+        <div class="row">
+          <div class="col">
+            <label for="channel">Channel (Read Only)</label>
+            <input class="form-control" type="text" id="channel" name="channel" value="">
+          </div>
+          <div class="col">
+          </div>
+        </div>
         <input type="hidden" id="term" name="term" value="xterm-256color">
         <button type="submit" class="btn btn-primary">Connect</button>
         <button type="reset" class="btn btn-danger">Reset</button>
